--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
     </div>
     <div class="second-class">
-      <div class="second-class-1">여기는</div>
-      <div class="second-class-2">두번째</div>
-      <div class="second-class-3">줄 입니다</div>
+      <div class="second-class-1"><h2>여기는</h2></div>
+      <div class="second-class-2"><i>두번째</i></div>
+      <div class="second-class-3"><b>줄 입니다</b></div>
     </div>
   </body>
 </html>
