--- a/chickens.html
+++ b/chickens.html
@@ -5,19 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chicken - Coltipedia</title>
+    <link rel="stylesheet" href="chickens.css" />
   </head>
   <body>
     <h1>Chicken</h1>
+
+    <a href="http://www.google.com">I AM A LINK GO GOOGLE!!</a><br />
+    <a href="index.html">GO INDEX PAGE</a>
+
     <p>
       The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated
-      fowl, a subspecies of the red junglefowl (Gallus gallus). They are one of
-      the most common and widespread domestic animals, with a total population
-      of 23.7 billion as of 2018[1], up from more than 19 billion in 2011.[2]
-      There are more chickens in the world than any other bird or domesticated
-      fowl.[2] Humans keep chickens primarily as a source of food (consuming
-      both their meat and eggs) and, less commonly, as pets. Originally raised
-      for cockfighting or for special ceremonies, chickens were not kept for
-      food until the Hellenistic period (4th–2nd centuries BC).
+      <a href="https://en.wikipedia.org/wiki/Fowl">fowl</a>, a subspecies of the
+      red junglefowl (Gallus gallus). They are one of the most common and
+      widespread domestic animals, with a total population of 23.7 billion as of
+      2018[1], up from more than 19 billion in 2011.[2] There are more chickens
+      in the world than any other bird or domesticated fowl.[2] Humans keep
+      chickens primarily as a source of food (consuming both their meat and
+      eggs) and, less commonly, as pets. Originally raised for cockfighting or
+      for special ceremonies, chickens were not kept for food until the
+      Hellenistic period (4th–2nd centuries BC).
     </p>
     <p>
       Genetic studies have pointed to multiple maternal origins in South Asia,
@@ -72,5 +78,22 @@
       quis praesentium dolorum at vitae ex facilis cupiditate, repudiandae
       corrupti ipsa a quos? Ipsam quo culpa ex!
     </p>
+
+    <h4>Movies</h4>
+    <h4>My Top 3 Movies:</h4>
+
+    <ol>
+      <li>Amadeus</li>
+      <li>Stand By Me</li>
+      <li>Amelie</li>
+    </ol>
+
+    <h4>Other Good Movies:</h4>
+
+    <ul>
+      <li>Alien</li>
+      <li>Parasite</li>
+      <li>Annie Hall</li>
+    </ul>
   </body>
 </html>
