--- a/chickens.html
+++ b/chickens.html
@@ -11,7 +11,11 @@
     <h1>Chicken</h1>
 
     <a href="http://www.google.com">I AM A LINK GO GOOGLE!!</a><br />
-    <a href="index.html">GO INDEX PAGE</a>
+    <a href="index.html">GO INDEX PAGE</a><br />
+    <img
+      src="C:\Users\userpc\Desktop\상품데이터\2000 고양이\2600 장난감\2604 터널 박스\product1\1.jpg"
+      alt=""
+    />
 
     <p>
       The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated
