--- a/chickens.html
+++ b/chickens.html
@@ -9,9 +9,16 @@
   </head>
   <body>
     <h1>Chicken</h1>
-
-    <a href="http://www.google.com">I AM A LINK GO GOOGLE!!</a><br />
-    <a href="index.html">GO INDEX PAGE</a><br />
+    <hr />
+    <h2>Auguries of Innocence</h2>
+    <p>
+      To see a World in a <br />
+      sedfdf
+    </p>
+    <div class="agroup">
+      <a href="http://www.google.com">I AM A LINK GO <span>GOOGLE!!</span></a>
+      <a href="index.html">GO INDEX PAGE</a>
+    </div>
     <div class="container">
       <img
         class="img1"
@@ -19,23 +26,26 @@
         alt=""
       />
       <span></span>
+      <img
+        src="https://mblogthumb-phinf.pstatic.net/MjAxOTExMTJfODgg/MDAxNTczNTY2MzkyMTE0.6JWsAxFCglsLW-6Pf9hO6izZ71B30gVyH4eIqMgLVw4g.jWvi6vEM-XyfbP-KCysVCmfxCdlbmD9SLRBcLrnZa7Ag.JPEG.westar4501/%ED%95%98%EB%8A%98_%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4_se.jpg?type=w800"
+        alt=""
+      />
+      <span></span>
     </div>
-    <img
-      class="img1"
-      src="https://mblogthumb-phinf.pstatic.net/MjAxOTExMTJfODgg/MDAxNTczNTY2MzkyMTE0.6JWsAxFCglsLW-6Pf9hO6izZ71B30gVyH4eIqMgLVw4g.jWvi6vEM-XyfbP-KCysVCmfxCdlbmD9SLRBcLrnZa7Ag.JPEG.westar4501/%ED%95%98%EB%8A%98_%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4_se.jpg?type=w800"
-      alt=""
-    />
+
     <p>
       The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated
       <a href="https://en.wikipedia.org/wiki/Fowl">fowl</a>, a subspecies of the
       red junglefowl (Gallus gallus). They are one of the most common and
       widespread domestic animals, with a total population of 23.7 billion as of
       2018[1], up from more than 19 billion in 2011.[2] There are more chickens
-      in the world than any other bird or domesticated fowl.[2] Humans keep
-      chickens primarily as a source of food (consuming both their meat and
-      eggs) and, less commonly, as pets. Originally raised for cockfighting or
-      for special ceremonies, chickens were not kept for food until the
-      Hellenistic period (4th–2nd centuries BC).
+      in the world than any other bird or domesticated fowl.<sup
+        ><a href="img">[2]</a></sup
+      >
+      Humans keep chickens primarily as a source of food (consuming both their
+      meat and eggs) and, less commonly, as pets. Originally raised for
+      cockfighting or for special ceremonies, chickens were not kept for food
+      until the Hellenistic period (4th–2nd centuries BC).
     </p>
     <p>
       Genetic studies have pointed to multiple maternal origins in South Asia,
@@ -107,5 +117,8 @@
       <li>Parasite</li>
       <li>Annie Hall</li>
     </ul>
+
+    <h2>I like H<sub>2</sub>O</h2>
+    <p>1/<sub>2</sub> + 1/<sub>2</sub> = 1</p>
   </body>
 </html>
