--- a/chickens.html
+++ b/chickens.html
@@ -66,7 +66,7 @@
       Commodi, et consequuntur?Lorem ipsum dolor sit, amet consectetur
       adipisicing elit. Mollitia dolor quia distinctio animi voluptatum,
       voluptate accusantium corrupti veniam atque, provident at qui fuga facilis
-      quidem soluta quibusdam vitae esse repellat. Error amet assumenda
+      quidem soluta quibusdam vitae esse <b>repellat</b>. Error amet assumenda
       delectus, cupiditate sed maiores quae perspiciatis sit recusandae ratione
       suscipit aliquam culpa temporibus, explicabo pariatur vel magnam alias
       ullam velit eligendi. In qui error sint ullam dolorem. Nobis laudantium
